@@ -22,6 +22,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #11583: Speed up os.path.isdir on Windows by using GetFileAttributes
+  instead of os.stat.
+
 - Named tuples now work correctly with vars().
 
 - Issue #12085: Fix an attribute error in subprocess.Popen destructor if the
